<resources>
    <string name="app_name">译音</string>
    <string name="intelligent_translation">译音</string>
    <string name="intelligent_english_chinese_translation">汉英互译</string>

    <string name="community">聋友圈</string>

    <string name="learn_chinese">汉字发音</string>
    <string name="learn_english">英语发音</string>
    <string name="learn_lesson">课文发音</string>
    <string name="learn_video">视频模仿</string>

    <string name="shop">购物</string>
    <string name="humans">联系人</string>
    <string name="discovery">发现</string>
    <string name="mine">我</string>
    <string name="oral_testing">口语评测</string>
    <string name="issue">反馈</string>
    <string name="about_us">关于</string>
    <string name="logout">注销登录</string>
    <string name="et_speack_hint">打字给对方看</string>
    <string name="text_sy_fy_zy_kf">手语翻译专业客服</string>
    <string name="text_kf_1">手语客服：周老师</string>
    <string name="text_kf_2">手语客服：王老师</string>
    <string name="text_kf_3">手语客服：攀老师</string>
    <string name="text_status_online">在线</string>
    <string name="text_status_offline">离线</string>
    <string name="text_bd_qy">绑定亲友</string>
    <string name="text_bd_qy_1">绑定亲友1:%s</string>
    <string name="text_bd_qy_2">绑定亲友2:%s</string>



    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册选择图片</string>
    <string name="cloud_handkeypoint">手部关键点</string>
    <string name="camera_permission_rationale">译音需要相机和存储权限</string>
    <string name="settings">设置</string>

    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
<!--    todo  一定要替换token-->
    <string name="agora_app_id">2cc3d49160f5410一定要替换token5656aadc</string>
    <string name="agora_access_token">00686fd4da662b041fd93962aIAC一定要替换WCYAEAAQDtpYJg</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="video_frame">视频流</string>


    <string name="english_choose">英文</string>

    <!--全称-->

    <!--简写-->
    <string name="intro">请输入文字</string>
    <string name="queue_add">开始合成</string>
    <string name="play">播放结果</string>
    <string name="release_tts">停止播放</string>
    <string name="pause">暂停播放</string>
    <string name="resume">继续播放</string>
    <string name="chinese">中文</string>
    <string name="nonetwork">网络未连接</string>
    <string name="abnormal">服务异常</string>
    <string name="speak_abnormal">语言和发音人不匹配</string>
    <string name="replay">重试</string>


    <!--BCR-->

    <!--ATF-->

    <string name="record">录音</string>
    <string name="converting">转写中...</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="language">语言:</string>
    <string name="stop_record">停止</string>
    <string name="select_file">选择文件</string>

    <string name="error_aft_network">网络连接异常</string>
    <string name="error_aft_internal">内部错误</string>
    <string name="error_aft_illegal_parameters">非法参数</string>
    <string name="error_aft_authorize_failed">鉴权失败</string>
    <string name="error_aft_audio_length_overflow">音频时长超限</string>
    <string name="error_aft_audio_transcript_failed">文件转写失败</string>

    <!--ASR-->
    <string name="start">开始</string>
    <string name="please_speak">请说话</string>
    <string name="example_say">你可以这样说</string>
    <string name="example_one">我要打车到万达广场</string>
    <string name="example_two">看无间道</string>
    <string name="example_three">最近的申通快递在哪</string>
    <string name="error_no_network">ERROR: 网络不可用，请重试…</string>
    <string name="error_service_unavailable">ERROR: 服务不可用</string>
    <string name="error_no_understand">ERROR: 服务器无法解析您的语音</string>
    <string name="asr_sound_pickup_interface_type">拾音界面类型</string>
    <string name="asr_sound_pickup_interface_type_plugin">ASR插件</string>
    <string name="asr_sound_pickup_interface_type_custom">自定义</string>
    <string name="asr_mark">* 该服务仅限华为手机使用</string>

    <string name="style">风格：</string>
    <string name="mode">播放模式：</string>
    <string name="volume">音量：</string>
    <string name="speech_rate">语速：</string>
    <string name="queuing_mode">排队模式</string>
    <string name="clear_mode">清空模式</string>
    <string name="please_enter_text">请输入文字~</string>

    <string name="male_zh">中文男声</string>
    <string name="male_en_eagle">英文男声-eagle</string>
    <string name="female_en_eagle">英文女声-eagle</string>
    <string name="male_en">英文男声</string>
    <string name="female_fr">法语女声</string>
    <string name="female_es">西班牙语女声</string>
    <string name="female_en">英文女声</string>
    <string name="female_zh">中文女声</string>

    <string name="female_de">德语女声</string>
    <string name="female_it">意大利语女声</string>

    <string name="init_progress">50%</string>

    <string name="online_tts">在线合成</string>
    <string name="offline_tts">离线合成</string>
    <string name="downloaded">已下载</string>
    <string name="french">法语</string>
    <string name="spanish">西班牙语</string>
    <string name="German">德语</string>
    <string name="Italian">意大利语</string>


    <string name="sound_dect_tips">提示:</string>
    <string name="sound_dect_tips_value">该声音识别业务能力，点击声音检测按钮，开启麦克风，持续识别周围的声音，如果出现指定类型的声音，则显示识别结果。点击停止按钮，则停止声音识别。声音识别业务目前支持声音类型有13种，包括：婴儿或小孩哭声、叫喊声、猫叫声、狗叫声、流水声、敲门声、门铃声、汽车喇叭声、火灾报警声、警报声、笑声、喷嚏声、打鼾声。</string>
    <string name="sound_dect_voice_type">声音类型</string>
    <string name="sound_dect_start">声音识别开始</string>
    <string name="sound_dect_stop">声音识别停止</string>
    <string name="sound_dect_error">声音识别错误码:</string>

    <string-array name="sound_dect_voice_type">
        <item>笑声</item>
        <item>婴儿或小孩哭声</item>
        <item>打鼾声</item>
        <item>喷嚏声</item>
        <item>叫喊声</item>
        <item>猫叫声</item>
        <item>狗叫声</item>
        <item>流水声</item>
        <item>汽车喇叭声</item>
        <item>门铃声</item>
        <item>敲门声</item>
        <item>火灾报警声</item>
        <item>警报声</item>
    </string-array>

    <string-array name="asr_long">
        <item>中文</item>
        <item>英文</item>
        <item>法语</item>
    </string-array>

    <string name="arengine_install_app" priority="translator">Install the latest version of HUAWEI AR Engine to continue.</string>
    <string name="arengine_cancel" priority="translator">CANCEL</string>
    <string name="arengine_install" priority="translator">INSTALL</string>

    <string name="you_may_speak">你可以开始讲话了...</string>
    <string name="destroied">语音识别器已关闭！</string>

    <string name="errorcode">错误码：</string>
    <string name="Others">其他异常错误</string>
    <string name="no_intnet">网络不可用，……请重试</string>
    <string name="no_service">服务不可用</string>
    <string name="no_balance">余额不足，请充值</string>


    <string name="aft_short">AFT短语音</string>
    <string name="aft_long">AFT长语音</string>
    <string name="text_word">已输入: 0 / 500</string>

    <string name="wording">已输入: </string>
    <string name="tts_max_tip">最大输入500个字符。</string>
    <!-- Strings used for fragments for navigation -->

</resources>