<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tips"
        android:layout_marginTop="@dimen/common_margin_top"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_language"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="40dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="HWtext-55ST"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/languageimage"
                    android:layout_width="15dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_down" />

                <TextView
                    android:id="@+id/languagetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/languageimage"
                    android:fontFamily="HWtext-55ST"
                    android:text="@string/chinese"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_below="@id/rl_language"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/common_line_color"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/rl_type"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/rl_language"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="HWtext-55ST"
                    android:text="@string/asr_sound_pickup_interface_type"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/typeimage"
                    android:layout_width="15dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_down" />

                <TextView
                    android:id="@+id/typetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/typeimage"
                    android:fontFamily="HWtext-55ST"
                    android:text="@string/asr_sound_pickup_interface_type_plugin"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.25dp"
                android:layout_below="@id/rl_type"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/common_line_color"
                android:visibility="gone" />


            <LinearLayout

                android:id="@+id/ll_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_type"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_say"
                    android:textColor="@color/text_color"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/linear_background"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/example_one_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_tips" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/example_one_image"
                        android:text="@string/example_one"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/linear_background"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/example_two_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_tips" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/example_two_image"
                        android:text="@string/example_two"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/linear_background">

                    <ImageView
                        android:id="@+id/example_three_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_tips" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@+id/example_three_image"
                        android:text="@string/example_three"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14sp" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_result_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_type"
                android:layout_marginTop="50dp"
                android:visibility="invisible">

                <ScrollView

                    android:id="@+id/icon_result_record"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/linear_background_result"
                    android:padding="10dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_record_result"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:textColor="@color/secondary_text_color"
                            android:textIsSelectable="true"
                            android:textSize="@dimen/text_size_16sp" />

                    </LinearLayout>

                </ScrollView>

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignTop="@id/icon_result_record"
                    android:layout_alignEnd="@id/icon_result_record"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/close" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/icon_record"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round">

        <ImageView
            android:id="@+id/iv_record"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_keyboard_voice_24" />

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_record"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_28sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/asr_mark"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/text_size_12sp"
        android:visibility="gone" />
</RelativeLayout>
